ajout logo humus footer

--- a/ok.html
+++ b/ok.html
@@ -146,16 +146,25 @@
       </div>
     </section>
     <footer id="footer">
-      <div class="footer-div">
-        <div class="footer-div-titre"><h4>Les composteurs du Clos Saint-Simon</h4></div>
-        <div class="footer-paragraph">
-          <a href="mailto:compostage.clos.saint.simon@gmail.com"><img src="./photos/mail.png" class="logo-fb" alt="enveloppe, logo email"/></a>
-          <a
-            href="https://www.facebook.com/lescomposteursduclossaintsimon/"
-            target="_blank"
-          >
-            <img src="./photos/fb-cercle.png" class="logo-fb" alt="logo facebook"/>
-          </a>
+      <div class="footer-div-titre"><h4>Les composteurs du Clos Saint-Simon</h4></div>
+      <div class="contain-footer">
+        <div class="footer-div">
+          <p class="footer-part">Partenaire</p>
+          <div class="logo-humus">
+            <img class="img-logo-humus" src="./photos/logo_humus_bleu.png"/>
+          </div>
+        </div>
+        <div class="footer-div">
+          <p class="footer-about">A propos</p>
+          <a class="footer-about-link" href="index.html">Accueil</a>
+          <a class="footer-about-link" href="actu.html">Actus</a>
+          <a class="footer-about-link" href="recherche.html">Recherche</a>
+        </div>
+        <div class="footer-div">
+          <p class="footer-contact">Nous contacter</p>
+          <div class="footer-paragraph">
+            <a class="footer-contact-link" href="mailto:compostage.clos.saint.simon@gmail.com"><img src="./photos/mail.png" class="logo-fb" alt="enveloppe, logo email"/><p>compostage.clos.saint.simon@gmail.com</p></a>
+          </div>
         </div>
       </div>
     </footer>
