modifications proposées par humus

--- a/non.html
+++ b/non.html
@@ -77,7 +77,7 @@
                     <img src="./photos/compost-chat.png" alt="dessin silhouette chat" class="image-ok">
                     <h3>Les déchets animaux</h3>
                 </div>
-                <p>Déjections, litière minérale</p>
+                <p>Déjections (celles des chats et des chiens notamment qui peuvent contenir des agents pathogènes transmissibles à l'être humain), litière minérale</p>
             </div>
             <div class="charbon ok">
                 <div class="cercle">
@@ -91,7 +91,7 @@
                     <img src="./photos/compost-sac.png" alt="dessin sac plastique" class="image-ok">
                     <h3>Les matériaux non-dégradables</h3>
                 </div>
-                <p>Sacs plastiques "recyclables", sachets de thé contenant du plastique, mégots de cigarette</p>
+                <p>Sacs plastiques dits "recyclables/compostables/biodégradables" (ils contiennent toujours en réalité un certain pourcentage de plastiques issus de la pétrochimie), sachets de thé contenant du plastique, mégots de cigarette</p>
             </div>
             <div class="plantes ok">
                 <div class="cercle">
@@ -99,13 +99,6 @@
                     <h3>Les plantes rampantes</h3>
                 </div>
                 <p>Liseron ou chiendent par exemple. Ces plantes sont capables de résister à des températures élevées et d'envahir les alentours du composteur</p>
-            </div>
-            <div class="résineux ok">
-                <div class="cercle">
-                    <img src="./photos/compost-sapin.png" alt="photo sapin" class="image-ok">
-                    <h3>Les résineux</h3>
-                </div>
-                <p>Ces plantes contiennent des inhibiteurs de croissance</p>
             </div>
         </div>
     </section>
