--- a/ok.html
+++ b/ok.html
@@ -135,6 +135,14 @@
                 </div>
                 <p>Penser à <b>découper avant de jeter</b>: boites d'oeufs, carton marron, sac kraft, rouleaux de PQ</p>
             </div>
+            <div class="résineux ok">
+              <div class="cercle">
+                  <img src="./photos/compost-sapin.png" alt="photo sapin" class="image-ok">
+                  <h3>Les résineux</h3>
+              </div>
+              <p>Contrairement à ce que l'on pense, il est possible de composter les résineux, en broyat et en petite quantité : comme pour tout, il s'agit d'une question d'équilibre</p>
+              <!-- ajout téléchargement pdf fiche études -->
+          </div>
         </div>
     </section>
     <section id="sectionTest">
