--- a/quizz.html
+++ b/quizz.html
@@ -544,7 +544,7 @@
                             />
                           </div>
                           <div>
-                            <label for="r8-1" class="repVert8">Non</label>
+                            <label for="r8-1" class="repVert8">Oui</label>
                           </div>
                         </div>
                       </li>
@@ -568,13 +568,13 @@
                             />
                           </div>
                           <div>
-                            <label for="r8-2">Oui</label>
+                            <label for="r8-2">Non</label>
                           </div>
                         </div>
                       </li>
                 </ul>
             </div>
-            <div class="bonneRep8"><p>Réponse : Non, le sapin et plus généralement toutes les plantes de la famille des résineux contiennent des inhibiteurs de croissance et sont donc toxiques pour les insectes du compost.</p></div>
+            <div class="bonneRep8"><p>Réponse : Oui, le sapin et plus généralement les résineux sont compostables mais en quantité raisonnable et en broyat mélangé au brun.</p></div>
         </div>
         <div>
             <h4>9. Lorsque je vais jeter mes déchets au composteur je :</h4>
