modif identité visuelle

--- a/non.html
+++ b/non.html
@@ -91,7 +91,7 @@
                     <img src="./photos/compost-sac.png" alt="dessin sac plastique" class="image-ok">
                     <h3>Les matériaux non-dégradables</h3>
                 </div>
-                <p>Sacs plastiques dits "recyclables/compostables/biodégradables" (ils contiennent toujours en réalité un certain pourcentage de plastiques issus de la pétrochimie), sachets de thé contenant du plastique, mégots de cigarette</p>
+                <p>Sacs plastiques dits "recyclables / compostables / biodégradables" (ils contiennent toujours en réalité un certain pourcentage de plastiques issus de la pétrochimie), sachets de thé contenant du plastique, mégots de cigarette</p>
             </div>
             <div class="plantes ok">
                 <div class="cercle">
