--- a/quizzbetes.html
+++ b/quizzbetes.html
@@ -425,7 +425,7 @@
                       </li>
                 </ul>
             </div>
-            <div class="bonneRep5"><p>Réponse : Elles servent de refuge aux insectes, elles apportent du carbone et permettent d'aérer la terre.</p></div>
+            <div class="bonneRep5"><p>Réponse : Elles servent de refuge aux insectes, elles apportent du carbone et permettent d'aérer la terre. Les coquilles d'oeuf constituent aussi un formidable apport en calcaire, un puissant régulateur d'acidité, et offre donc un environnement propice aux petits insectes.</p></div>
         </div>
         <div>
             <h4>6. Les champignons et les bactéries présents dans le composteur aiment bien le pain.</h4>
