--- a/utilisation.html
+++ b/utilisation.html
@@ -78,22 +78,44 @@
         <div class="utilisation">
           <div class="utilisation-cat">
             <h3 class="utilisation-cat-titre">Le test du poing</h3>
-            <p class="utilisation-cat-p">Avant d'utiliser le compost, il faut savoir reconnaitre un compost mûr et en bonne santé.</p>
-            <p class="utilisation-cat-p">Le compost mûr <strong>ressemble à du terreau</strong> et est ni trop sec ni trop humide. Afin de vérifier la teneur en eau de notre compost, un test simple est à réaliser: <strong>le test du poing</strong>.</p>
-            <p class="utilisation-cat-p">En quoi consiste le test du poing ? C'est très simple. Il suffit de prendre une poignée de compost et de la serrer dans votre main. Si le compost dégouline, il est trop humide. S'il s'effrite, il est trop sec.</p>
+            <div class="utilisation-description">
+              <div class="div-img-utilisation">
+                <img src="./photos/point.png" class="img-utilisation"/>
+              </div>
+              <div class="div-utilisation-description">
+                <p class="utilisation-cat-p">Avant d'utiliser le compost, il faut savoir reconnaitre un compost mûr et en bonne santé.</p>
+                <p class="utilisation-cat-p">Le compost mûr <strong>ressemble à du terreau</strong> et est ni trop sec ni trop humide. Afin de vérifier la teneur en eau de notre compost, un test simple est à réaliser: <strong>le test du poing</strong>.</p>
+                <p class="utilisation-cat-p">En quoi consiste le test du poing ? C'est très simple. Il suffit de prendre une poignée de compost et de la serrer dans votre main. Si le compost dégouline, il est trop humide. S'il s'effrite, il est trop sec.</p>
+              </div>
+            </div>
           </div>
           <div class="utilisation-cat">
             <h3 class="utilisation-cat-titre">Utiliser le compost en paillage</h3>
-            <p class="utilisation-cat-p">Le paillage consiste à recouvrir le sol pour le <strong>protéger du froid</strong> pendant l'hiver ou bien pour le <strong>nourrir</strong>, à n'importe quelle période de l'année.</p>
-            <p class="utilisation-cat-p">Pour ce faire, rien de plus simple: on aère la terre (sans la retourner) à l'aide d'une binette (ce qui permet également d'enlever les mauvaises herbes), puis on recouvre le sol avec une bonne couche de compost.</p>
-            <p class="utilisation-cat-p">En effet, il n'est pas nécessaire de le mélanger à la terre, c'est même contrindiqué puisque le compost a besoin d'oxygène. Il est donc recommandé de légèrement "griffer" la terre avant de répandre le compost, afin que celui-ci communique plus facilement avec le sol.</p>
-            <p class="utilisation-cat-p">Notez que l'on peut pailler avec autre chose que du compost: paille, feuilles mortes, bâche, ...</p>
+            <div class="utilisation-description">
+              <div class="div-img-utilisation">
+                <img src="./photos/paillage.png" class="img-utilisation"/>
+              </div>
+              <div class="div-utilisation-description">
+                <p class="utilisation-cat-p">Le paillage consiste à recouvrir le sol pour le <strong>protéger du froid</strong> pendant l'hiver ou bien pour le <strong>nourrir</strong>, à n'importe quelle période de l'année.</p>
+                <p class="utilisation-cat-p">Pour ce faire, rien de plus simple: on aère la terre (sans la retourner) à l'aide d'une binette (ce qui permet également d'enlever les mauvaises herbes), puis on recouvre le sol avec une bonne couche de compost.</p>
+                <p class="utilisation-cat-p">En effet, il n'est pas nécessaire de le mélanger à la terre, c'est même contrindiqué puisque le compost a besoin d'oxygène. Il est donc recommandé de légèrement "griffer" la terre avant de répandre le compost, afin que celui-ci communique plus facilement avec le sol.</p>
+                <p class="utilisation-cat-p">La fertilisation des plantes en pot s'effectue généralement au printemps (tout comme le rempotage) et se prolonge en été. Ce sont des périodes où les plantes sont en pleine croissance et ont besoin d'énergie.</p>
+                <p class="utilisation-cat-p">Notez que l'on peut pailler avec autre chose que du compost: paille, feuilles mortes, bâche, ...</p>
+              </div>
+            </div>
           </div>
           <div class="utilisation-cat">
             <h3 class="utilisation-cat-titre">Utiliser le compost en eau d'arrosage</h3>
-            <p class="utilisation-cat-p">Le compost peut aussi s'utiliser en <strong>eau d'arrosage</strong>, notamment pour fertiliser les plantes en pot. Celles-ci n'étant pas en plein sol, elles ont d'autant plus besoin d'engrais pour bien pousser.</p>
-            <p class="utilisation-cat-p">Pour utiliser le compost de cette manière, il suffit de mélanger <strong>1 cuillère à soupe de compost dans 1 litre d'eau</strong>, et répéter cette opération 1 fois par mois. Il est important de bien respecter ce ratio pour ne pas brûler les racines des plantes ou les etouffer avec une surcharge de nutriments.</p>
-            <p class="utilisation-cat-p">La fertilisation des plantes en pot s'effectue généralement au printemps (tout comme le rempotage) et se prolonge en été. Ce sont des périodes où les plantes sont en pleine croissance et ont besoin d'énergie.</p>
+            <div class="utilisation-description">
+              <div class="div-img-utilisation">
+                <img src="./photos/arrosoir.png" class="img-utilisation"/>
+              </div>
+              <div class="div-utilisation-description">
+                <p class="utilisation-cat-p">Le compost peut aussi s'utiliser en <strong>eau d'arrosage</strong>, notamment pour fertiliser les plantes en pot. Celles-ci n'étant pas en plein sol, elles ont d'autant plus besoin d'engrais pour bien pousser.</p>
+                <p class="utilisation-cat-p">Pour utiliser le compost de cette manière, il suffit de mélanger <strong>1 cuillère à soupe de compost dans 1 litre d'eau</strong>, et répéter cette opération 1 fois par mois. Il est important de bien respecter ce ratio pour ne pas brûler les racines des plantes ou les etouffer avec une surcharge de nutriments.</p>
+                <p class="utilisation-cat-p">La fertilisation des plantes en pot s'effectue généralement au printemps (tout comme le rempotage) et se prolonge en été. Ce sont des périodes où les plantes sont en pleine croissance et ont besoin d'énergie.</p>
+              </div>
+            </div>
           </div>
         </div>
 
