--- a/ok.html
+++ b/ok.html
@@ -18,7 +18,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka+One&family=Space+Mono&family=Shrikhand&display=swap" rel="stylesheet">
-    <title>Les composteurs du Clos Saint-Simon</title>
+<link rel="icon" href="logo-feuille.png" />
+<link rel="apple-touch-icon" href="logo-feuille.png" />    
+<title>Les composteurs du Clos Saint-Simon</title>
   </head>
   <body>
     <header class="header">
