--- a/quelcomposteur.html
+++ b/quelcomposteur.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka+One&family=Space+Mono&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="logo-feuille.png" />
+    <link rel="apple-touch-icon" href="logo-feuille.png" />
     <title>Les composteurs du Clos Saint-Simon</title>
   </head>
   <body>
