personnalisation des title

--- a/actu.html
+++ b/actu.html
@@ -23,7 +23,7 @@
     />
     <link rel="icon" href="logo-feuille.png" />
     <link rel="apple-touch-icon" href="logo-feuille.png" />
-    <title>Les composteurs du Clos Saint-Simon</title>
+    <title>Les composteurs du Clos Saint-Simon - Actus</title>
   </head>
   <body>
     <header class="header">
