--- a/recherche.html
+++ b/recherche.html
@@ -17,7 +17,7 @@
     rel="stylesheet">
     <link rel="icon" href="logo-feuille.png" />
     <link rel="apple-touch-icon" href="logo-feuille.png" />
-  <title>Les composteurs du Clos Saint-Simon</title>
+  <title>Les composteurs du Clos Saint-Simon - Recherche</title>
 </head>
 
 <body>
