--- a/utilisation.html
+++ b/utilisation.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredoka+One&family=Space+Mono&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="icon" href="logo-feuille.png" />
     <link rel="apple-touch-icon" href="logo-feuille.png" />
-    <title>Les composteurs du Clos Saint-Simon</title>
+    <title>Les composteurs du Clos Saint-Simon - Utilisation du compost</title>
       </head>
       <body>
         <header class="header">
