ajout actu apéro

--- a/actu.html
+++ b/actu.html
@@ -80,6 +80,19 @@
     <section id="actu">
         <h2>Actualités</h2>
         <div class="actus">
+          <div class="actus-div">
+            <div class="actus-div-img">
+                <img src="./photos/apero.png" alt="Dessin de personnes avec un verre à la main" class="actus-div-img-item"/>
+            </div>
+            <div class="actus-div-content">
+                <h3 class="actus-div-content-titre">Apéro des voisins le 11 juin à 18h</h3>
+                <p class="actus-div-content-date">Le 04/06/2023</p>
+                <p class="actus-div-content-p">Le <strong>dimanche 11 juin à 18h</strong>, nous organisons un apéro entre voisins dans notre résidence sur la pelouse en face du composteur ! Une occasion de partager un moment convivial entre voisins !</p>
+                <p class="actus-div-content-p">Pour l'organisation rien de plus simple : chacun amène un petit quelque chose (boisson, nourriture, chaises, ...), mais surtout votre bonne humeur !</p>
+                <p class="actus-div-content-p">Nous en profiterons aussi pour <strong>inaugurer notre nouveau bac de compostage</strong> (bac de maturation) en faisant notre <strong>tout premier prélèvement de compost mûr</strong> !</p>
+                <p class="actus-div-content-p">Nous espérons vous voir nombreuses et nombreux !</p>
+            </div>
+          </div>
             <div class="actus-div">
                 <div class="actus-div-img">
                     <img src="./photos/compost-transvasement.png" alt="Dessin de personnes jetant leurs déchets dans un bac à compost" class="actus-div-img-item"/>
