--- a/recherche.html
+++ b/recherche.html
@@ -22,48 +22,50 @@
 
 <body>
   <header class="header">
-    <div class="div-header-border">
-      <img src="./photos/logo-site.png" class="logo-header"
-        alt="dessin représentant deux personnes à côté d'un bac à compost entourés de plantes" />
-      <h1 class="titre-header">Les composteurs du Clos Saint-Simon</h1>
+    <div class="div-header-border" id="headerBorder">
+      <!-- <img src="./photos/logo-site.png" class="logo-header" alt="dessin représentant deux personnes à côté d'un bac à compost entourés de plantes" /> -->
+      <div class="banniere-content">
+        <img src="./photos/banniere6.jpg" class="banniere" alt="épluchures sur planche à découper, bac à compost">
+      </div>
+      <div class="titre-header-content">
+        <h1 class="titre-header">Les composteurs du Clos Saint-Simon</h1>
+      </div>
     </div>
+
     <div id="bouton" class="apparition1">
       <button>☰</button>
-    </div>
+  </div>
     <nav id="menu" class="nav affichage">
       <ul id="display">
         <li class="ongletMenu border-top">
-          <a href="./index.html" class="lienMenu">Accueil</a>
+          <a href="./index.html" class="lienMenu"><i class="fa-solid fas fa-home"></i></a>
         </li>
-        <li class="nav__déroulant ongletMenu derouleInfos"><a href="#" class="contain-fleche">Comment composter<img
-              src="./photos/fleche-anim.png" class="fleche-menu-anim flecheInfos" /></a>
+        <li class="nav__déroulant ongletMenu derouleInfos"><a href="#" class="contain-fleche">Tout savoir sur le compostage<i id="iconeFlecheMenu1" class="fa-solid fas fa-chevron-up"></i>
+          <!-- <img src="./photos/fleche-anim.png" class="fleche-menu-anim flecheInfos"/> -->
+        </a>
           <ul class="sous sousInfos" id="sous">
             <li class="affichage-mobile-padding"><a href="ok.html">Ce que je peux composter</a></li>
             <li class="affichage-mobile-padding"><a href="non.html">Ce que je ne peux pas composter</a></li>
             <li class="affichage-mobile-padding"><a href="gestes.html">Les bons gestes à adopter</a></li>
+            <li class="affichage-mobile-padding"><a href="./betes.html">Les bébêtes du compost</a></li>
+            <li class="affichage-mobile-padding"><a href="./utilisation.html">Utiliser le compost</a></li>
           </ul>
         </li>
-        <li class="ongletMenu">
-          <a href="./betes.html" class="lienMenu">Les bébêtes du compost</a>
-        </li>
-        <li class="ongletMenu">
-          <a href="./utilisation.html" class="lienMenu">Utiliser le compost</a>
+        <li class="nav__déroulant ongletMenu derouleQuizz"><a href="#" class="contain-fleche">Quizz <i id="iconeFlecheMenu" class="fa-solid fas fa-chevron-up"></i>
+          <!-- <img src="./photos/fleche-anim.png" class="fleche-menu-anim flecheQuizz"/> -->
+        </a>
+          <ul class="sous sousQuizz" id="sous">
+            <li class="affichage-mobile-padding"><a href="quizz.html">Comment et quoi composter</a></li>
+            <li class="affichage-mobile-padding"><a href="quizzcompost.html">Reconnaitre et utiliser le compost mûr</a></li>
+            <li class="affichage-mobile-padding"><a href="quizzbetes.html">Les petites bêtes du compost</a></li>
+            <li class="affichage-mobile-padding"><a href="quelcomposteur.html">Quel composteur es-tu ?</a></li>
+          </ul>
         </li>
         <li class="ongletMenu">
           <a href="./recherche.html" class="lienMenu">Recherche</a>
         </li>
         <li class="ongletMenu">
-          <a href="./actu.html" class="lienMenu">Actualités</a>
-        </li>
-        <li class="nav__déroulant ongletMenu derouleQuizz"><a href="#" class="contain-fleche">Quizz<img
-              src="./photos/fleche-anim.png" class="fleche-menu-anim flecheQuizz" /></a>
-          <ul class="sous sousQuizz" id="sous">
-            <li class="affichage-mobile-padding"><a href="quizz.html">Comment et quoi composter</a></li>
-            <li class="affichage-mobile-padding"><a href="quizzcompost.html">Reconnaitre et utiliser le compost mûr</a>
-            </li>
-            <li class="affichage-mobile-padding"><a href="quizzbetes.html">Les petites bêtes du compost</a></li>
-            <li class="affichage-mobile-padding"><a href="quelcomposteur.html">Quel composteur es-tu ?</a></li>
-          </ul>
+          <a href="./actu.html" class="lienMenu">Actus</a>
         </li>
         <li class="ongletMenu border-bottom">
           <a href="./contact.html" class="lienMenu">Contact</a>
