--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="IQMAf4LhjYR9KqhUJtnMZkzDSW7tQglwDHkuVn7nrrE" />
+    <meta name="description" content="Retrouvez ici toutes les informations utiles liées au compostage collectif."/>
     <script
       src="https://kit.fontawesome.com/cb8e7ae64b.js"
       crossorigin="anonymous"
