ajout lang et footer

--- a/recherche.html
+++ b/recherche.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -103,7 +103,7 @@
       <div class="footer-div">
         <p class="footer-part">Partenaire</p>
         <div class="logo-humus">
-          <img class="img-logo-humus" src="./photos/logo_humus_bleu.png"/>
+          <img class="img-logo-humus" src="./photos/logo_humus_blanc.png"/>
         </div>
       </div>
       <div class="footer-div">
@@ -115,7 +115,7 @@
       <div class="footer-div">
         <p class="footer-contact">Nous contacter</p>
         <div class="footer-paragraph">
-          <a class="footer-contact-link" href="mailto:compostage.clos.saint.simon@gmail.com"><img src="./photos/mail.png" class="logo-fb" alt="enveloppe, logo email"/><p>compostage.clos.saint.simon@gmail.com</p></a>
+          <a class="footer-contact-link" href="mailto:compostage.clos.saint.simon@gmail.com"><img src="./photos/enveloppe.png" class="logo-fb" alt="enveloppe, logo email"/><p>compostage.clos.saint.simon@gmail.com</p></a>
         </div>
       </div>
     </div>
